--- a/README
+++ b/README
@@ -15,6 +15,7 @@ Available Characters
 * Derpy
 * Trixie (Both with and without hat)
 * Rose
+* Lyra Heartstrings
 
 Scripts and stuff
 -----------------
