--- a/README
+++ b/README
@@ -16,6 +16,8 @@ Available Characters
 * Trixie (Both with and without hat)
 * Rose
 * Lyra Heartstrings
+* DJ Pon3 (Both with and without shades)
+* Princess Celestia
 
 Scripts and stuff
 -----------------
