--- a/README
+++ b/README
@@ -11,13 +11,14 @@ Available Characters
 * Fluttershy
 * Rairy
 * Pinkie Pie
-* Applejack
+* Applejack (Both with and without hat)
 * Derpy
 * Trixie (Both with and without hat)
 * Rose
 * Lyra Heartstrings
 * DJ Pon3 (Both with and without shades)
 * Princess Celestia
+* Princess Luna
 
 Scripts and stuff
 -----------------
