--- a/README
+++ b/README
@@ -19,6 +19,7 @@ Available Characters
 * DJ Pon3 (Both with and without shades)
 * Princess Celestia
 * Princess Luna
+* Big McIntosh
 
 Scripts and stuff
 -----------------
