--- a/README
+++ b/README
@@ -20,6 +20,7 @@ Available Characters
 * Princess Celestia
 * Princess Luna
 * Big McIntosh
+* Princess Cadance
 
 Scripts and stuff
 -----------------
